# deep-matching-wrapper

./: .gitignore  README.md  demo_matcher.py  demo_onnx_matcher.py  demo_realtime.py  notes.md  pixi.toml  test_matcher.py  test_registry.py
benchmark/: HPatch_evaluation.py  HPatch_summary.ipynb  Hpatch_summary.csv  Hpatch_summary.py  MEGADEPTH_REPORT.md  Matching_evaluation.py  MegaDepth1500_evaluation.py  MegaDepth1500_summary.csv  MegaDepth1500_summary.ipynb  MegaDepth1500_summary.py  Realtime_evaluation.py
docs/: HPATCH_REPORT.md  MATCHING_RESULT.md  MEGADEPTH_RESULT.md  REALTIME_RESULT.md
matcher/: base_matcher.py  handcrafted.py  utils.py
matcher-cpp/: CMakeLists.txt  README.md
matcher-cpp-onnx/: README.md
matcher-cpp-onnx/liftfeat/: CMakeLists.txt  README.md
matcher-cpp-onnx/liftfeat/demo/: liftfeat_demo.cpp
matcher-cpp-onnx/liftfeat/include/: LiftFeatOnnxMatcher.h
matcher-cpp-onnx/liftfeat/src/: LiftFeatOnnxMatcher.cpp
matcher-cpp/clidd/: CMakeLists.txt  README.md
matcher-cpp/clidd/demo/: demo_clidd.cpp
matcher-cpp/clidd/include/clidd/: CliddTorchMatcher.h
matcher-cpp/clidd/src/: CliddTorchMatcher.cpp
matcher-cpp/clidd/weights/: clidd_a48_fp32_k2048.pt  clidd_m64_fp32_k200.pt  clidd_s64_fp32_k2048.pt
matcher-cpp/edm/: CMakeLists.txt  README.md
matcher-cpp/edm/demo/: demo_edm.cpp
matcher-cpp/edm/include/edm/: EdmTorchMatcher.h
matcher-cpp/edm/src/: EdmTorchMatcher.cpp
matcher-cpp/liftfeat/: CMakeLists.txt  README.md
matcher-cpp/liftfeat/demo/: demo_liftfeat.cpp
matcher-cpp/liftfeat/include/liftfeat/: LiftFeatTorchMatcher.h
matcher-cpp/liftfeat/src/: LiftFeatTorchMatcher.cpp
matcher-cpp/lightglue/: CMakeLists.txt  README.md
matcher-cpp/lightglue/demo/: demo_superpoint_lightglue.cpp
matcher-cpp/lightglue/include/lightglue/: SuperPointLightGlueMatcher.h
matcher-cpp/lightglue/src/: SuperPointLightGlueMatcher.cpp
matcher-cpp/xfeat/: CMakeLists.txt  README.md  README_LIGHTGLUE.md
matcher-cpp/xfeat/demo/: demo_xfeat.cpp
matcher-cpp/xfeat/include/xfeat/: StateDictLoader.h  XFeatModel.h  XFeatTorchMatcher.h
matcher-cpp/xfeat/scripts/: auto_convert.py
matcher-cpp/xfeat/src/: StateDictLoader.cpp  XFeatModel.cpp  XFeatTorchMatcher.cpp
matcher-cpp/xfeat/weights/: xfeat_fp32_k2048.pt  xfeat_fp32_k4096.pt
matcher-onnx/: _ort.py  base_matcher.py  clidd.py  edm.py  liftfeat.py  subpx.py  superpoint_lightglue.py  xfeat.py
matcher-onnx/weights/clidd/: clidd_a48_fp16_640x480.onnx.data  clidd_a48_fp32_640x480.onnx  clidd_e128_fp16_640x480.onnx  clidd_g128_fp16_640x480.onnx  clidd_l64_fp16_640x480.onnx  (+20 more)
matcher-tensorrt/CLIDD-TensorRT/: CMakeLists.txt  README.md
matcher-tensorrt/CLIDD-TensorRT/scripts/: CMakeCache.txt  Makefile  build.sh  build_all_engines.py  cmake_install.cmake
matcher-tensorrt/CLIDD-TensorRT/src/: clidd_trt.cpp  clidd_trt.hpp  clidd_trt_correct.cpp  clidd_trt_correct_final.cpp  clidd_trt_fixed.cpp  clidd_trt_fixed_implementation.cpp
matcher-tensorrt/CLIDD-TensorRT/test/: test_fixed.cpp  test_inference.cpp  test_simple.cpp
matcher-tensorrt/CLIDD-TensorRT/weights/: clidd_m64_640x480.onnx  clidd_m64_640x480_fp16.engine  clidd_m64_640x480_fp32.engine  clidd_m64_800x608.onnx  clidd_m64_800x608.onnx.data  clidd_m64_800x608_fp16.engine  clidd_m64_800x608_fp32.engine  clidd_m64_800x608_int8.engine
matcher/clidd/: __init__.py
matcher/edm/: __init__.py
matcher/eloftr/: __init__.py
matcher/gim/: __init__.py
matcher/liftfeat/: __init__.py
matcher/lightglue/: __init__.py
matcher/subpx/: __init__.py
matcher/xfeat/: __init__.py
outputs/hpatch-clidd-a48/: pair_results.csv  results.txt
outputs/hpatch-clidd-e128/: pair_results.csv
outputs/hpatch-clidd-g128/: results.txt
outputs/hpatch-clidd-l64/: results.txt
outputs/hpatch-clidd-m64/: pair_results.csv  results.txt
outputs/hpatch-clidd-n64/: pair_results.csv  results.txt
outputs/hpatch-clidd-s64/: results.txt
outputs/hpatch-clidd-t64/: results.txt
outputs/hpatch-clidd-u128/: pair_results.csv  results.txt
outputs/hpatch-edm/: pair_results.csv
outputs/hpatch-eloftr/: pair_results.csv  results.txt
outputs/hpatch-gim-lightglue/: pair_results.csv  results.txt
outputs/hpatch-sift-lightglue/: results.txt
outputs/hpatch-sift-nn/: pair_results.csv  results.txt
outputs/hpatch-superpoint-lightglue/: pair_results.csv
outputs/hpatch-superpoint-lightglue-subpx/: pair_results.csv  results.txt
outputs/hpatch-xfeat-lightglue/: pair_results.csv
outputs/hpatch-xfeat-lightglue-subpx/: pair_results.csv  results.txt
outputs/hpatch-xfeat-star/: results.txt
outputs/hpatch-xfeat-subpx/: pair_results.csv  results.txt
outputs/megadepth-clidd-a48/: pair_results.csv
outputs/megadepth-clidd-e128/: pair_results.csv  results.txt
outputs/megadepth-clidd-g128/: pair_results.csv
outputs/megadepth-clidd-l64/: pair_results.csv
outputs/megadepth-clidd-m64/: results.txt
outputs/megadepth-clidd-n64/: pair_results.csv
outputs/megadepth-clidd-s64/: pair_results.csv  results.txt
outputs/megadepth-clidd-t64/: results.txt
outputs/megadepth-clidd-u128/: pair_results.csv  results.txt
outputs/megadepth-edm/: results.txt
outputs/megadepth-eloftr/: results.txt
outputs/megadepth-gim-lightglue/: pair_results.csv  results.txt
outputs/megadepth-liftfeat/: pair_results.csv  results.txt
outputs/megadepth-orb-nn/: pair_results.csv  results.txt
outputs/megadepth-sift-lightglue/: pair_results.csv  results.txt
outputs/megadepth-sift-nn/: pair_results.csv
outputs/megadepth-superpoint-lightglue/: pair_results.csv  results.txt
outputs/megadepth-superpoint-lightglue-subpx/: pair_results.csv  results.txt
outputs/megadepth-xfeat/: pair_results.csv
outputs/megadepth-xfeat-lightglue/: pair_results.csv  results.txt
outputs/megadepth-xfeat-star/: results.txt
outputs/megadepth-xfeat-subpx/: pair_results.csv  results.txt
scripts/: build_all_matchers_cpp.sh  build_matcher_cpp.sh  check.sh  check_deps.sh  clean_env.sh  download_onnxruntime.sh  get_info_opencv_cuda.py  test_onnx.py  test_opencv_cuda.py  test_psutil.py  test_pynvml.py
(+309 files in other folders)
